--- a/src/layouts/Project.astro
+++ b/src/layouts/Project.astro
@@ -6,8 +6,8 @@ import Footer from '../components/Footer.astro';
 import FormattedDate from '../components/FormattedDate.astro';
 
 type Props = CollectionEntry<'blog'>['data'];
-
-const { title, description, pubDate, updatedDate, heroImage, developer, tech, team, github_url,demo_url } = Astro.props;
+console.log(Astro.props)
+const { title, description, pubDate, updatedDate, heroImage, developer, tech_stack, team, github_url,demo_url } = Astro.props;
 ---
 
 <html lang="en">
@@ -77,11 +77,11 @@ const { title, description, pubDate, updatedDate, heroImage, developer, tech, te
 						<hr />
 
 					</div>
-					<p>Developed by {developer}</p>
-					<p>Tech stack {tech.join(' & ')}</p>
-					<p>Team {team.join('& ')}</p>
-					<p>GitHub {github_url}</p>
-					<p>Demo {demo_url}</p>
+					<p>Developed by: {developer}</p>
+					<p>Tech stack: {tech_stack && tech_stack.join(' & ')}</p>
+					<p>Team: {team.join('& ')}</p>
+					<p>GitHub: {github_url}</p>
+					<p>Demo: {demo_url}</p>
 					<slot />
 				</div>
 			</article>
