--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -14,6 +14,7 @@ import { SITE_TITLE } from '../consts';
 			<div class="hidden md:block">
 				<div class="flex items-center space-x-4">
 					<HeaderLink href="/" class="px-3 py-2 text-gray-700 hover:text-primary">Home</HeaderLink>
+					<HeaderLink href="/events" class="px-3 py-2 text-gray-700 hover:text-primary">Events</HeaderLink>
 					<HeaderLink href="/blog" class="px-3 py-2 text-gray-700 hover:text-primary">Blog</HeaderLink>
 					<HeaderLink href="/project" class="px-3 py-2 text-gray-700 hover:text-primary">Project</HeaderLink>
 					<HeaderLink href="/about" class="px-3 py-2 text-gray-700 hover:text-primary">About</HeaderLink>
