event26 update + fix links

--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -16,7 +16,7 @@ import { SITE_TITLE } from '../consts';
 					<HeaderLink href="/" class="px-3 py-2 text-gray-700 hover:text-primary">Home</HeaderLink>
 					<HeaderLink href="/events" class="px-3 py-2 text-gray-700 hover:text-primary">Events</HeaderLink>
 					<HeaderLink href="/blog" class="px-3 py-2 text-gray-700 hover:text-primary">Blog</HeaderLink>
-					<HeaderLink href="/project" class="px-3 py-2 text-gray-700 hover:text-primary">Project</HeaderLink>
+					<HeaderLink href="/project" class="px-3 py-2 text-gray-700 hover:text-primary">Projects</HeaderLink>
 					<HeaderLink href="/about" class="px-3 py-2 text-gray-700 hover:text-primary">About</HeaderLink>
 				</div>
 			</div>
