--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -41,7 +41,7 @@ import { SITE_TITLE, SITE_DESCRIPTION } from '../consts';
 							<a href="#about" class="bg-white text-primary hover:bg-gray-100 font-bold py-3 px-8 rounded-lg transition-colors duration-300 shadow-lg hover:shadow-xl transform hover:-translate-y-1">
 								Learn More
 							</a>
-							<a href="#join" class="bg-transparent hover:bg-white/10 text-white font-bold py-3 px-8 rounded-lg border-2 border-white transition-all duration-300 hover:shadow-lg">
+							<a href="https://www.linkedin.com/groups/14439291/" target="_blank" class="bg-transparent hover:bg-black/10 hover:text-white hover:-translate-y-1 text-white font-bold py-3 px-8 rounded-lg border-2 border-white transition-all duration-300 hover:shadow-lg">
 								Join Us
 							</a>
 						</div>
@@ -307,10 +307,10 @@ import { SITE_TITLE, SITE_DESCRIPTION } from '../consts';
 										Ready to build, learn, and connect with fellow tech enthusiasts? Join our next monthly event and be part of the Build2Learn community!
 									</p>
 									<div class="flex flex-col sm:flex-row gap-4">
-										<a href="#" class="bg-white text-primary hover:bg-gray-100 font-bold py-3 px-8 rounded-lg transition-colors shadow-lg hover:shadow-xl transform hover:-translate-y-1 duration-300 text-center">
+										{/* <a href="#" class="bg-white text-primary hover:bg-gray-100 font-bold py-3 px-8 rounded-lg transition-colors shadow-lg hover:shadow-xl transform hover:-translate-y-1 duration-300 text-center">
 											Register for Next Event
-										</a>
-										<a href="https://www.linkedin.com/groups/14439291/" target="_blank" class="bg-transparent hover:bg-white/10 text-white font-bold py-3 px-8 rounded-lg border-2 border-white transition-all duration-300 hover:shadow-lg text-center">
+										</a> */}
+										<a href="https://www.linkedin.com/groups/14439291/" target="_blank" class="bg-transparent hover:bg-white/10 hover:text-white hover:-translate-y-1 text-white font-bold py-3 px-8 rounded-lg border-2 border-white transition-all duration-300 hover:shadow-lg text-center">
 											Join Our Linkedin group
 										</a>
 									</div>
