--- a/src/layouts/BlogPost.astro
+++ b/src/layouts/BlogPost.astro
@@ -7,7 +7,7 @@ import FormattedDate from '../components/FormattedDate.astro';
 
 type Props = CollectionEntry<'blog'>['data'];
 
-const { title, description, pubDate, updatedDate, heroImage } = Astro.props;
+const { title, description, pubDate, updatedDate, heroImage, tags } = Astro.props;
 ---
 
 <html lang="en">
@@ -71,6 +71,23 @@ const { title, description, pubDate, updatedDate, heroImage } = Astro.props;
 						<hr />
 					</div>
 					<slot />
+					{
+						tags && (
+							<div class="flex items-center">
+								{
+									tags.map((tag: string) => (
+									<a
+										class="not-prose rounded-base border-border bg-main text-main-foreground ml-3 border px-2 py-0.5 text-sm no-underline first:ml-0"
+										href={`/blog/tags/${tag}`}
+									>
+										#{tag}
+									</a>
+									))
+								}
+							</div>
+						)
+					}
+					
 				</div>
 			</article>
 		</main>
