--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -7,8 +7,8 @@ import { SITE_TITLE } from '../consts';
 	<div class="container mx-auto px-4 sm:px-6 lg:px-8">
 		<nav class="flex justify-between items-center h-16">
 			<div class="flex-shrink-0">
-				<a href="/" class="text-primary font-bold text-xl">
-					{SITE_TITLE}
+				<a href="/">
+					<img src="/images/build2learn-logo.svg" fetchpriority="high" loading="eager" width="179" height="24" />
 				</a>
 			</div>
 			<div class="hidden md:block">
