--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -4,11 +4,11 @@ import { SITE_TITLE } from '../consts';
 ---
 
 <header class="bg-white shadow-sm sticky top-0 z-50">
-	<div class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8">
+	<div class="container mx-auto px-4 sm:px-6 lg:px-8">
 		<nav class="flex justify-between items-center h-16">
 			<div class="flex-shrink-0">
-				<a href="/" class="text-primary font-bold text-xl">
-					{SITE_TITLE}
+				<a href="/">
+					<img src="/images/build2learn-logo.svg" fetchpriority="high" loading="eager" width="179" height="24" />
 				</a>
 			</div>
 			<div class="hidden md:block">
