--- a/src/pages/about.astro
+++ b/src/pages/about.astro
@@ -6,7 +6,7 @@ import Layout from '../layouts/BlogPost.astro';
 	title="About Build2Learn"
 	description="A community where people come together to build their ideas, learn new skills, and collaborate on exciting projects."
 	pubDate={new Date('April 30 2025')}
-	heroImage="/images/about_us_hero.jpg"
+	heroImage="/images/about_us_hero.webp"
 >
 	<h2>What is Build2Learn?</h2>
 	<p>
