blog ul ol style fix (#39)

--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -176,7 +176,7 @@ article ul, article ol {
 	margin-bottom: 1rem;
 }
 article ul{
-	list-style: square;
+	list-style: disc;
 }
 article ol{
 	list-style: decimal;
