linkedin page added and homepage folds

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -61,7 +61,31 @@ import HeroSmoothSlider from '../components/HeroSmoothSlider.astro';
 				</svg>
 			</div>
 		</section>
-
+		<section class="bg-secondary text-white home-page-blue-banner  flex items-center justify-center lg:mb-24">
+			<div class="container-fluid mx-auto px-4 sm:px-6 lg:px-8 py-4 lg:py-20">
+				<div class="text-center my-16 md:mt-0">					
+					<img src="/images/b2l-whitelogo.png" width="388" height="52" alt="Build2Learn Logo" class="mx-auto mb-4" />
+					<p class="text-xl text-white max-w-3xl mx-auto">
+						a vibrant community where technical experts, students, and professionals collaborate monthly to create, innovate, and grow together.
+					</p>
+				</div>
+			</div>
+		</section>
+		<section>
+			<div class="container bg-gray-100 mx-auto px-4 sm:px-6 lg:px-8 pt-20 pb-20 rounded-2xl">
+				<div class="top-holder mb-16 flex flex-col md:flex-row items-end justify-between">
+					<div class="left-cont">					
+						<h1 class="mt-4 mb-6">The <span class="text-primary">Build2Learn</span> <br /> Way</h1>						
+					</div>
+					<div class="right-cont">
+						<Button text="Join us" href="/" variant="primary" />
+					</div>					
+				</div>
+				<div class="bottom-holder">
+					
+				</div>
+			</div>
+		</section>
 		<main>
 			<!-- What We Do Section -->
 			<section id="about" class="py-20">
@@ -309,7 +333,7 @@ import HeroSmoothSlider from '../components/HeroSmoothSlider.astro';
 										{/* <a href="#" class="bg-white text-primary hover:bg-gray-100 font-bold py-3 px-8 rounded-lg transition-colors shadow-lg hover:shadow-xl transform hover:-translate-y-1 duration-300 text-center">
 											Register for Next Event
 										</a> */}
-										<a href="https://www.linkedin.com/groups/14439291/" target="_blank" class="bg-transparent hover:bg-white/10 hover:text-white hover:-translate-y-1 text-white font-bold py-3 px-8 rounded-lg border-2 border-white transition-all duration-300 hover:shadow-lg text-center">
+										<a href="https://www.linkedin.com/company/build2learn/" target="_blank" class="bg-transparent hover:bg-white/10 hover:text-white hover:-translate-y-1 text-white font-bold py-3 px-8 rounded-lg border-2 border-white transition-all duration-300 hover:shadow-lg text-center">
 											Join Our Linkedin group
 										</a>
 									</div>
