--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -41,7 +41,7 @@ import HeroSmoothSlider from '../components/HeroSmoothSlider.astro';
 							A community where people come together to build their ideas, learn new skills, and collaborate on exciting projects.
 						</p>
 						<div class="flex flex-wrap gap-4">
-							<Button text="Join us" href="/" variant="primary" />							
+							<Button text="Follow us" href="https://www.linkedin.com/company/build2learn/" variant="primary" />							
 						</div>
 					</div>
 					<div class="md:w-1/2 flex justify-center">
