--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -35,7 +35,7 @@ import HeroSmoothSlider from '../components/HeroSmoothSlider.astro';
 					<div class="md:w-1/2 mb-10 md:mb-0">
 						<h1 class="text-h1 mb-1">
 							Build. Learn.<br/>
-							<span class="text-h1 text-primary">Collaborate.</span>
+							<span class="text-h1 text-primary">Collaborate...</span>
 						</h1>
 						<p class="text-gray-700">
 							A community where people come together to build their ideas, learn new skills, and collaborate on exciting projects.
