announcement astro file added

--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -1,5 +1,6 @@
 ---
 import HeaderLink from './HeaderLink.astro';
+import Announcement from '../components/announcement.astro';
 import { SITE_TITLE } from '../consts';
 ---
 
@@ -86,3 +87,4 @@ import { SITE_TITLE } from '../consts';
 		}
 	});
 </script>
+<Announcement />
