annoucnement banner added

--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -1,6 +1,7 @@
 ---
 import HeaderLink from './HeaderLink.astro';
 import { SITE_TITLE } from '../consts';
+import Announcement from '../components/announcement.astro';
 ---
 
 <header class="bg-white shadow-sm sticky top-0 z-50">
@@ -86,3 +87,4 @@ import { SITE_TITLE } from '../consts';
 		}
 	});
 </script>
+<Announcement />
