--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -228,7 +228,7 @@ import HeroSmoothSlider from '../components/HeroSmoothSlider.astro';
 												<svg xmlns="http://www.w3.org/2000/svg" class="h-5 w-5 mr-3 inline" fill="none" viewBox="0 0 24 24" stroke="currentColor">
 													<path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M8 7V3m8 4V3m-9 8h10M5 21h14a2 2 0 002-2V7a2 2 0 00-2-2H5a2 2 0 00-2 2v12a2 2 0 002 2z" />
 												</svg> 
-												19th Apr 2025
+												26th Apr 2025
 											</p>
 										</div>
 										<div class="flex items-center">
@@ -251,7 +251,7 @@ import HeroSmoothSlider from '../components/HeroSmoothSlider.astro';
 										</div>
 									</div>
 									
-									<a href="/events/build2learn-26" class="inline-block bg-white text-primary hover:bg-gray-100 font-bold py-3 px-8 rounded-lg transition-colors shadow-lg hover:shadow-xl transform hover:-translate-y-1 duration-300">
+									<a href="https://lu.ma/7tnq58qg?utm_source=b2l-website" class="inline-block bg-white text-primary hover:bg-gray-100 font-bold py-3 px-8 rounded-lg transition-colors shadow-lg hover:shadow-xl transform hover:-translate-y-1 duration-300">
 										Register Now
 									</a>
 								</div>
@@ -334,7 +334,7 @@ import HeroSmoothSlider from '../components/HeroSmoothSlider.astro';
 											Register for Next Event
 										</a> */}
 										<a href="https://www.linkedin.com/company/build2learn/" target="_blank" class="bg-transparent hover:bg-white/10 hover:text-white hover:-translate-y-1 text-white font-bold py-3 px-8 rounded-lg border-2 border-white transition-all duration-300 hover:shadow-lg text-center">
-											Join Our Linkedin group
+											Follow our Linkedin page
 										</a>
 									</div>
 								</div>
@@ -346,13 +346,13 @@ import HeroSmoothSlider from '../components/HeroSmoothSlider.astro';
 									<p class="text-gray-600 mb-6">
 										Join us on the third Saturday of every month for our next exciting event!
 									</p>
-									<div class="inline-block bg-gray-100 px-4 py-2 rounded-lg text-gray-700">
+									<!-- <div class="inline-block bg-gray-100 px-4 py-2 rounded-lg text-gray-700">
 										<div class="flex items-center justify-center">
 											<svg xmlns="http://www.w3.org/2000/svg" class="h-5 w-5 mr-2 text-primary" fill="none" viewBox="0 0 24 24" stroke="currentColor">
 												<path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M8 7V3m8 4V3m-9 8h10M5 21h14a2 2 0 002-2V7a2 2 0 00-2-2H5a2 2 0 00-2 2v12a2 2 0 002 2z" />
 											</svg>
 											<span>Third Saturday of the month</span>
-										</div>
+										</div>-->
 									</div>
 								</div>
 							</div>
