--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -18,6 +18,7 @@ import Announcement from '../components/announcement.astro';
 					<HeaderLink href="/events" class="px-3 py-2 text-gray-700 hover:text-primary">Events</HeaderLink>
 					<HeaderLink href="/blog" class="px-3 py-2 text-gray-700 hover:text-primary">Blog</HeaderLink>
 					<HeaderLink href="/project" class="px-3 py-2 text-gray-700 hover:text-primary">Projects</HeaderLink>
+					<HeaderLink href="/ideas" class="px-3 py-2 text-gray-700 hover:text-primary">Ideas</HeaderLink>
 					<HeaderLink href="/about" class="px-3 py-2 text-gray-700 hover:text-primary">About</HeaderLink>
 				</div>
 			</div>
