--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -1,7 +1,7 @@
 ---
 import HeaderLink from './HeaderLink.astro';
 import { SITE_TITLE } from '../consts';
-import Announcement from '../components/announcement.astro';
+//import Announcement from '../components/announcement.astro';
 ---
 
 <header class="bg-white shadow-sm sticky top-0 z-50">
@@ -70,6 +70,7 @@ import Announcement from '../components/announcement.astro';
 			<a href="/events" class="block px-3 py-2 rounded-md text-base font-medium text-gray-700 hover:text-primary hover:bg-gray-50">Events</a>
 			<a href="/blog" class="block px-3 py-2 rounded-md text-base font-medium text-gray-700 hover:text-primary hover:bg-gray-50">Blog</a>
 			<a href="/project" class="block px-3 py-2 rounded-md text-base font-medium text-gray-700 hover:text-primary hover:bg-gray-50">Project</a>
+			<a href="/ideas" class="block px-3 py-2 rounded-md text-base font-medium text-gray-700 hover:text-primary hover:bg-gray-50">Ideas</a>
 			<a href="/about" class="block px-3 py-2 rounded-md text-base font-medium text-gray-700 hover:text-primary hover:bg-gray-50">About</a>
 		</div>
 	</div>
@@ -88,4 +89,4 @@ import Announcement from '../components/announcement.astro';
 		}
 	});
 </script>
-<Announcement />
+<!-- <Announcement /> -->
