madurai event added

--- a/src/components/announcement.astro
+++ b/src/components/announcement.astro
@@ -3,14 +3,14 @@
 		<div class="container mx-auto flex flex-col md:flex-row items-center justify-between gap-4 text-center md:text-left">
 			<div>
 			<p class="text-lg font-semibold">
-				🎉 Build2Learn Meetup - <span class="text-primary font-bold">Saturday, July 26</span>
+				🎉 Build2Learn Meetup - <span class="text-primary font-bold">Friday, August 15</span>
 			</p>
 			<p class="text-sm text-gray-700">
-				⏰ 9:30 AM – 2:00 PM IST | 📍 Freshworks, Block B, Global SP Infocity, Chennai - 600096
+				⏰ 9:30 AM – 2:00 PM IST | 📍 Dot com Infoway, Madurai - 600096
 			</p>
 			</div>
 			<a 
-			href="https://lu.ma/7tnq58qg?utm_source=b2l-website" 
+			href="https://lu.ma/ajalu7xe?utm_source=b2l-website" 
 			target="_blank" 
 			class="inline-block bg-primary text-white font-semibold px-6 py-2 rounded-lg shadow-md hover:bg-primary-dark transition"
 			>
