--- a/src/components/testimonial.astro
+++ b/src/components/testimonial.astro
@@ -14,11 +14,18 @@
 					<p class="font-semibold text-gray-900">Tamil Prabhakaran</p>
 					<a href="https://www.linkedin.com/in/tamilprabaharan/" target="_blank" class="text-blue-500 hover:underline text-sm">LinkedIn</a>
 				</div>
+				
 				<div class="bg-gray-50 rounded-xl shadow-md p-6 text-center hover:shadow-xl transition-shadow">
 					<img src="/images/rhikshi.jpeg" alt="Person 2" class="w-20 h-20 rounded-full mx-auto mb-4 border-4 border-primary" />
 					<p class="text-gray-700 italic mb-4">“you ever go to something and immediately feel like you’re in the right place? thats build2learn for me. its like a playground for grown-up nerds, just people helping each other, and building cool stuff. build2learn is that one thing that makes me feel like i actually know what im doing with my life for a few hours. Honestly i’ve made more progress on personal projects at build2learn than in my actual workspace.”</p>
 					<p class="font-semibold text-gray-900">Rhikshitha Kamalakannan</p>
 					<a href="https://www.linkedin.com/in/rhikshitha/" target="_blank" class="text-blue-500 hover:underline text-sm">LinkedIn</a>
+				</div>
+				<div class="bg-gray-50 rounded-xl shadow-md p-6 text-center hover:shadow-xl transition-shadow">
+					<img src="/images/paarthaanc.jpeg" alt="Paarthaan C" class="w-20 h-20 rounded-full mx-auto mb-4 border-4 border-primary" />
+					<p class="text-gray-700 italic mb-4">“Build2learn has become a place where people could learn efficient stuffs and deliver them in real time projects rather than just knowing them... It is actually very beneficial for the College students as it became a platform to connect students with industrial professionals and to work along with them... In overall, Build2learn is going a great job... Hats off to the organizing team Of Build2learn”</p>
+					<p class="font-semibold text-gray-900">Paarthaan C</p>
+					<a href="https://www.linkedin.com/in/paarthan-c-b52930257/" target="_blank" class="text-blue-500 hover:underline text-sm">LinkedIn</a>
 				</div>
 				<!-- Card 2 -->
 				<div class="bg-gray-50 rounded-xl shadow-md p-6 text-center hover:shadow-xl transition-shadow">
@@ -34,6 +41,12 @@
 					<p class="text-gray-700 italic mb-4">“Build2Learn isn’t about just sitting and listening a tech content.You meet cool people, share ideas, and start building right away.Work on your idea or join someone else’s,  all good vibes.By the end, you’re not watching speakers , you become one. No reactions, only actions..”</p>
 					<p class="font-semibold text-gray-900">Dhanush Kandhan</p>
 					<a href="https://www.linkedin.com/in/dhanushkandhan/" target="_blank" class="text-blue-500 hover:underline text-sm">LinkedIn</a>
+				</div>
+				<div class="bg-gray-50 rounded-xl shadow-md p-6 text-center hover:shadow-xl transition-shadow">
+					<img src="/images/mohamedshifan.jpeg" alt="Mohamed Shifan" class="w-20 h-20 rounded-full mx-auto mb-4 border-4 border-primary" />
+					<p class="text-gray-700 italic mb-4">“I fell into tutorial hell without even realizing it, I've been self-learning since my 12th standard, but it wasn't until my pre-final year that I became aware of it,The Build2Learn event truly opened doors for me.For the first time, I stepped out of the cycle of just watching tutorials and actually started building projects and referring to documentation,The environment, the pressure, the pitching  everything pushed me in the right direction,It helped me break free and finally build to learn.”</p>
+					<p class="font-semibold text-gray-900">Mohamed Shifan</p>
+					<a href="https://www.linkedin.com/in/shifan-mts" target="_blank" class="text-blue-500 hover:underline text-sm">LinkedIn</a>
 				</div>
 				
 				</div>
