--- a/src/components/testimonial.astro
+++ b/src/components/testimonial.astro
@@ -48,6 +48,12 @@
 					<p class="font-semibold text-gray-900">Mohamed Shifan</p>
 					<a href="https://www.linkedin.com/in/shifan-mts" target="_blank" class="text-blue-500 hover:underline text-sm">LinkedIn</a>
 				</div>
+				<div class="bg-gray-50 rounded-xl shadow-md p-6 text-center hover:shadow-xl transition-shadow">
+					<img src="/images/thangaayyanaar.jpeg" alt="Thanga Ayyanar" class="w-20 h-20 rounded-full mx-auto mb-4 border-4 border-primary" />
+					<p class="text-gray-700 italic mb-4">“Participating in the Build2Learn hackathon was a game-changer for me. It showed me just how much I can accomplish in just 3 hours—I surprised myself with what I was able to build in such a short time. Beyond that, the event brought together an amazing community of like-minded creators. I had the chance to network, exchange ideas, and draw inspiration from the incredible projects others were working on. Most importantly, Build2Learn helped me break through my habit of procrastination and actually start building. It was the perfect mix of motivation, creativity, and connection. Can't wait for the next one!”</p>
+					<p class="font-semibold text-gray-900">Thanga Ayyanar</p>
+					<a href="https://in.linkedin.com/in/thangaayyanar" target="_blank" class="text-blue-500 hover:underline text-sm">LinkedIn</a>
+				</div>
 				
 				</div>
 			</div>
