--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -1,7 +1,7 @@
 ---
 import HeaderLink from './HeaderLink.astro';
 import { SITE_TITLE } from '../consts';
-import Announcement from '../components/announcement.astro';
+//import Announcement from '../components/announcement.astro';
 ---
 
 <header class="bg-white shadow-sm sticky top-0 z-50">
@@ -89,4 +89,4 @@ import Announcement from '../components/announcement.astro';
 		}
 	});
 </script>
-<Announcement />
+<!--<Announcement />-->
