--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -228,7 +228,7 @@ import Testimonial from '../components/testimonial.astro';
 										</div>
 									</div>
 									
-									<a href="https://lu.ma/2ljn8fzm?utm_source=b2l-website" target="_blank" class="inline-block bg-white text-primary hover:bg-gray-100 font-bold py-3 px-8 rounded-lg transition-colors shadow-lg hover:shadow-xl transform hover:-translate-y-1 duration-300">
+									<a href="https://luma.com/gm73cud1?utm_source=b2l-website" target="_blank" class="inline-block bg-white text-primary hover:bg-gray-100 font-bold py-3 px-8 rounded-lg transition-colors shadow-lg hover:shadow-xl transform hover:-translate-y-1 duration-300">
 										Register Now
 									</a>
 								</div>
