--- a/src/pages/ideas/[id].astro
+++ b/src/pages/ideas/[id].astro
@@ -1,6 +1,6 @@
 ---
 import EventLayout from '../../layouts/EventLayout.astro';
-import ideasData from '../../content/ideas.json';
+import ideasData from '../../content/project/ideas/ideas.json';
 
 export async function getStaticPaths() {
   const projects = ideasData.projects;
