--- a/src/components/FormattedDate.astro
+++ b/src/components/FormattedDate.astro
@@ -6,6 +6,7 @@ interface Props {
 const { date } = Astro.props;
 ---
 
+{date && (
 <time datetime={date.toISOString()}>
 	{
 		date.toLocaleDateString('en-us', {
@@ -15,3 +16,4 @@ const { date } = Astro.props;
 		})
 	}
 </time>
+)}
