--- a/src/components/BaseHead.astro
+++ b/src/components/BaseHead.astro
@@ -5,6 +5,9 @@ import '../styles/global.css';
 
 import { SITE_TITLE } from '../consts';
 
+import GoogleAnalytics from './GoogleAnalytics.astro'
+
+
 interface Props {
 	title: string;
 	description: string;
@@ -54,3 +57,5 @@ const { title, description, image = '/blog-placeholder-1.jpg' } = Astro.props;
 <meta property="twitter:title" content={title} />
 <meta property="twitter:description" content={description} />
 <meta property="twitter:image" content={new URL(image, Astro.url)} />
+
+<GoogleAnalytics measurementId={'G-2RVY8N5G4Y'} />
